...
                android:background="@android:color/transparent"
                app:menu="@menu/button_nav_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:contentDescription="@string/main_usability_floating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sp"
            android:src="@drawable/ic_add"
            app:layout_anchor="@id/bottomAppBar" />
...
