...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@null"
        />

    <TextView
            android:id="@+id/textView_maitenance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:paddingTop="@dimen/_24sdp"
            android:text="@string/maintenance"
...
