...
        android:id="@+id/fragment_album_creation"
        android:name="com.co.retrofit.app.feature.view.fragments.album.AlbumCreation"
        android:label="@string/title_collector"
        tools:layout="@layout/fragment_album_creation" >
    </fragment>
    <fragment
        android:id="@+id/navigation_artist_list"
        android:name="com.co.retrofit.app.feature.view.fragments.ArtistListFragment"
        android:label="@string/title_artist"
        tools:layout="@layout/fragment_artist_list">
        <action
            android:id="@+id/action_navigation_artist_to_navigation_albums_of_artist"
            app:destination="@id/navigation_albums_of_artist" />
...
    <fragment
        android:id="@+id/navigation_add_music"
        android:name="com.co.retrofit.app.feature.view.fragments.album.AlbumMusicFragment"
        android:label="@string/title_artist" />

      <fragment
            android:id="@+id/navigation_artist"
            android:name="com.co.retrofit.app.feature.view.fragments.ArtistFragment"
            android:label="@string/title_artist"
            tools:layout="@layout/fragment_artist" />
</navigation>
