...
                android:layout_margin="@dimen/_1sdp"
                android:contentDescription="@string/image_contentDescription"
                tools:src="@mipmap/ic_launcher"
                android:paddingTop="@dimen/_10sp"/>

        <TextView
                android:id="@+id/artist_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_1sdp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="@dimen/_20sp"
...
